# x11-xinput

./: x11-xinput.cabal
Graphics/X11/XInput/: Parser.chs  Types.chs
