name:                x11-xinput
version:             0.1.0.1
synopsis:            Haskell FFI bindings for X11 XInput library (-lXi) (fork)
description:         Haskell FFI bindings for X11 XInput library (-lXi). (fork)
                     Only XInput version 2.0 is supported.
                     See XInput manual pages and XInput2.h, XI2.h for more documentation.
homepage:            https://github.com/cytb/x11-xinput
license:             BSD3
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          cyt.b@aol.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

extra-source-files: xitest.hs

library
  exposed-modules:     Graphics.X11.XInput,
                       Graphics.X11.XInput.Parser,
                       Graphics.X11.XInput.Foreign,
                       Graphics.X11.XInput.Functions,
                       Graphics.X11.XInput.Devices,
                       Graphics.X11.XInput.Types
  -- other-modules:       
  build-depends:       base >= 4.5 && < 5,
                       containers >= 0.4,
                       mtl >= 2.1,
                       X11 >= 1.6
  build-tools:         c2hs
  extra-libraries:     "Xi"

source-repository head
  type: git
  location: git://github.com/cytb/x11-xinput.git
